travis: Enable ciao-controller unit tests
They don't need to be run as root.

Signed-off-by: Samuel Ortiz <sameo@linux.intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ before_script:
 
 script:
    - go env
-   - go test -v github.com/01org/ciao/ciao-launcher github.com/01org/ciao/ciao-scheduler github.com/01org/ciao/payloads
+   - go test -v github.com/01org/ciao/ciao-launcher github.com/01org/ciao/ciao-scheduler github.com/01org/ciao/payloads github.com/01org/ciao/ciao-controller
    - export GOROOT=`go env GOROOT` && sudo -E $GOROOT/bin/go test -v github.com/01org/ciao/ssntp
