Networking: Travis CI
Ensure that the networking unit test compile.
This is will ensure that code changes will catch potential
breakage in the unit tests, even though the tests will not run.

Signed-off-by: Manohar Castelino <manohar.r.castelino@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ before_script:
    - sudo cp /etc/pki/ciao/cert-CNAgent-localhost.pem /etc/pki/ciao/client.pem
    - sudo cp /etc/pki/ciao/cert-Controller-localhost.pem /etc/pki/ciao/cert-client-localhost.pem
 
-# We'll skip the networking and ssntp tests for now
+# We'll skip the networking and ssntp tests for now, however ensure that they compile
 
 script:
    - go env
    - go test -v github.com/01org/ciao/ciao-launcher github.com/01org/ciao/ciao-scheduler github.com/01org/ciao/payloads github.com/01org/ciao/ciao-controller
    - export GOROOT=`go env GOROOT` && sudo -E $GOROOT/bin/go test -v github.com/01org/ciao/ssntp
+   - go test -run NONE -short github.com/01org/ciao/networking/libsnnet
