Networking: Checking if docker exists
Signed-off-by: Manohar Castelino <manohar.r.castelino@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: go
 sudo: required
 
+services:
+  - docker
+
 go:
     - 1.6
     - tip
@@ -26,3 +29,4 @@ script:
    - go test -v github.com/01org/ciao/ciao-launcher github.com/01org/ciao/ciao-scheduler github.com/01org/ciao/payloads github.com/01org/ciao/ciao-controller
    - export GOROOT=`go env GOROOT` && sudo -E $GOROOT/bin/go test -v github.com/01org/ciao/ssntp
    - go test -v -run NONE -short github.com/01org/ciao/networking/libsnnet
+   - docker --version
