--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ script:
    - sudo docker pull debian
    - sudo ip link add testdummy type dummy
    - sudo ip addr add 198.51.100.1/24 dev testdummy
-   - export SNNET_ENV=198.51.100.0/24 && sudo -E $GOROOT/bin/go test -v -short --tags travis github.com/01org/ciao/networking/libsnnet
+   - export GOROOT=`go env GOROOT` && export SNNET_ENV=198.51.100.0/24 && sudo -E PATH=$PATH:$GOROOT/bin $GOPATH/bin/test-cases -text -short -tags travis github.com/01org/ciao/networking/libsnnet
