Networking: Workaround: Travis CI dependency
Travis CI does not seem to pull in dependencies of test packages
when there are vanity imports in general. So removed vanity import

Travis CI on the tip does not seem to pull test dependencies. Hence
adding explicit go get for now for test specific dependencies.

Signed-off-by: Manohar Castelino <manohar.r.castelino@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
     - 1.6
     - tip
 
-go_import_path: github.com/01org/ciao
+#go_import_path: github.com/01org/ciao
 
 # We need to create and install SSNTP certs for the SSNTP and controller tests
 before_script:
@@ -35,4 +35,5 @@ script:
    - sudo ip addr add 198.51.100.1/24 dev testdummy
    - test-cases -text github.com/01org/ciao/ciao-launcher github.com/01org/ciao/ciao-scheduler github.com/01org/ciao/ciao-controller github.com/01org/ciao/payloads
    - export GOROOT=`go env GOROOT` && sudo -E PATH=$PATH:$GOROOT/bin $GOPATH/bin/test-cases -text github.com/01org/ciao/ssntp
+   - go get github.com/google/gofuzz
    - export GOROOT=`go env GOROOT` && export SNNET_ENV=198.51.100.0/24 && sudo -E PATH=$PATH:$GOROOT/bin $GOPATH/bin/test-cases -text -short -tags travis github.com/01org/ciao/networking/libsnnet
