gitignore: update path for ciao-cert
Git status notes when ciao-cert is built.  There was a past gitignore
covering it when it was under a tools directory.  The tools directory is no
longer present.  Simply update the gitignore to match the current paths.

Signed-off-by: Tim Pepper <timothy.c.pepper@linux.intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ networking/docker/plugin/plugin
 networking/libsnnet/tests/cncicli/cncicli
 networking/libsnnet/tests/cncli/cncli
 networking/libsnnet/tests/snnetcli/snnetcli
-ssntp/tools/tools
+ssntp/ciao-cert/ciao-cert
 test-cases/test-cases
