--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ go_import_path: github.com/01org/ciao
 before_install:
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
+  - go get github.com/pierrre/gotestcover
 
 # We need to create and install SSNTP certs for the SSNTP and controller tests
 before_script:
@@ -50,6 +51,7 @@ script:
    - export GOROOT=`go env GOROOT` && sudo -E PATH=$PATH:$GOROOT/bin $GOPATH/bin/test-cases -text github.com/01org/ciao/ssntp
    - go get github.com/google/gofuzz
    - export GOROOT=`go env GOROOT` && export SNNET_ENV=198.51.100.0/24 && sudo -E PATH=$PATH:$GOROOT/bin $GOPATH/bin/test-cases -text -short -tags travis github.com/01org/ciao/networking/libsnnet
+   - $GOPATH/bin/gotestcover -v -coverprofile=cover.out github.com/01org/ciao/ciao-launcher github.com/01org/ciao/ciao-scheduler github.com/01org/ciao/ciao-controller/... github.com/01org/ciao/payloads
 
 after_success:
-   - $GOPATH/bin/goveralls -service=travis-ci
+   - $GOPATH/bin/goveralls -service=travis-ci -coverprofile=cover.out
