--- a/networking/ciao-cnci-agent/scripts/ciao-cnci-agent.service
+++ b/networking/ciao-cnci-agent/scripts/ciao-cnci-agent.service
@@ -3,6 +3,7 @@ Description=Ciao CNCI Agent
 After=network.target
 
 [Service]
+ExecStartPre=-/usr/bin/ethtool -L enp0s2 combined 4
 ExecStart=/usr/sbin/ciao-cnci-agent -server auto -v 3
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
