gitignore: cscope files
cscope can understand go and integrates well with editors/IDEs.  But if
you're using it, it clutters 'git status' output.  Add an ignore for
cscope*.

Signed-off-by: Tim Pepper <timothy.c.pepper@linux.intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ networking/libsnnet/tests/cncli/cncli
 networking/libsnnet/tests/snnetcli/snnetcli
 ssntp/ciao-cert/ciao-cert
 test-cases/test-cases
+cscope*
