--- a/.travis.yml
+++ b/.travis.yml
@@ -49,14 +49,14 @@ script:
    - sudo ip addr add 198.51.100.1/24 dev testdummy
    - go get github.com/google/gofuzz github.com/stretchr/testify
    - go get github.com/golang/lint/golint github.com/client9/misspell/cmd/misspell
-   - go list ./... | grep -v vendor | xargs -t misspell
-   - go list ./... | grep -v vendor | xargs -t go vet
-#  - go list ./... | grep -v vendor | xargs -tL 1 golint -set_exit_status
-   - if [[ "$TRAVIS_GO_VERSION" != "tip" ]] ; then go list ./... | grep -v vendor | xargs -tL 1 golint -set_exit_status ; fi
-   - go list ./... | grep -v vendor | xargs go list -f '{{.Dir}}/*.go' | xargs -I % bash -c "misspell -error %"
-   - go list ./... | grep -v vendor | xargs go list -f '{{.Dir}}' | xargs gocyclo -over 15
-   - go list ./... | grep -v vendor | xargs go list -f '{{.Dir}}' | xargs -L 1 ineffassign
-   - go list ./... | grep -v vendor | xargs go list -f '{{.Dir}}' | xargs gofmt -s -l | wc -l | xargs -I % bash -c "test % -eq 0"
+   - go list ./... | grep -v github.com/01org/ciao/vendor | xargs -t misspell
+   - go list ./... | grep -v github.com/01org/ciao/vendor | xargs -t go vet
+#  - go list ./... | grep -v github.com/01org/ciao/vendor | xargs -tL 1 golint -set_exit_status
+   - if [[ "$TRAVIS_GO_VERSION" != "tip" ]] ; then go list ./... | grep -v github.com/01org/ciao/vendor | xargs -tL 1 golint -set_exit_status ; fi
+   - go list ./... | grep -v github.com/01org/ciao/vendor | xargs go list -f '{{.Dir}}/*.go' | xargs -I % bash -c "misspell -error %"
+   - go list ./... | grep -v github.com/01org/ciao/vendor | xargs go list -f '{{.Dir}}' | xargs gocyclo -over 15
+   - go list ./... | grep -v github.com/01org/ciao/vendor | xargs go list -f '{{.Dir}}' | xargs -L 1 ineffassign
+   - go list ./... | grep -v github.com/01org/ciao/vendor | xargs go list -f '{{.Dir}}' | xargs gofmt -s -l | wc -l | xargs -I % bash -c "test % -eq 0"
    - sudo mkdir -p /var/lib/ciao/instances
    - sudo chmod 0777 /var/lib/ciao/instances
    - test-cases -text -coverprofile /tmp/cover.out -short github.com/01org/ciao/ciao-launcher github.com/01org/ciao/ciao-scheduler github.com/01org/ciao/ciao-controller/... github.com/01org/ciao/payloads
