--- a/testutil/singlevm/configuration.yaml
+++ b/testutil/singlevm/configuration.yaml
@@ -2,10 +2,10 @@ configure:
   scheduler:
     storage_uri: /etc/ciao/configuration.yaml
   controller:
-    compute_ca: /etc/pki/ciao/compute_ca.pem
-    compute_cert: /etc/pki/ciao/compute_key.pem
-    identity_user: controller
-    identity_password: ciao
+    compute_ca: /etc/pki/ciao/controller_cert.pem
+    compute_cert: /etc/pki/ciao/controller_key.pem
+    identity_user: csr
+    identity_password: hello
   image_service:
     url: http://glance.example.com
   launcher:
