ciao-launcher: Add support for AttachVolume and DetachVolume
Early attempt to implement AttachVolume and DetachVolume.  It's not great
but it sort of works.   Here's what is working:

1. You can attach and detach volumes to live instances.

And here's what doesn't:

1. Volumes are not re-attached after the instance restarts.
2. The QMP code isn't great.  In particular detach removes the
   device but doesn't remove the underlying drive.
3. Mapped devices can be leaked.  We should unmap when powering
   down the instances.  We should also unmap when launcher starts
   to make sure no mapped devices have been leaked while launcher
   has not been running.

Fixes #365

Signed-off-by: Mark Ryan <mark.d.ryan@intel.com>

--- a/ciao-launcher/tests/ciaolc/start_container.yaml
+++ b/ciao-launcher/tests/ciaolc/start_container.yaml
@@ -20,7 +20,7 @@ start:
 ---
 #cloud-config
 runcmd:
-  - [ /usr/bin/python3, -m, http.server]
+  - [ /bin/bash, -c, "while true; do sleep 60; done" ]
 ...
 ---
 {
