--- a/_DeploymentAndDistroPackaging/docker/keystone/keystone.conf
+++ b/_DeploymentAndDistroPackaging/docker/keystone/keystone.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 [database]
-connection = mysql+pymysql://KEYSTONE_DB_USER:KEYSTONE_DB_PASSWORD@MARIADB_HOST/KEYSTONE_DB_NAME
+connection = mysql+pymysql://keystone:secret@localhost/keystone
 
 [cache]
 enabled = True
