ansible: Update os-keystone role
- Remove unused variables
  mysql_root_password, mysql_fqdn, keystone_db_password
  are no longer needed since keystone container was updated.

- Add keystone_admin_password and mysql_data variables

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/os-keystone/tasks/access.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/os-keystone/tasks/access.yml
@@ -19,8 +19,8 @@
   - name: Create custom services
     keystone:
       command: "ensure_service"
-      service_name: "{{ item.service_name }}"
-      service_type: "{{ item.service_type }}"
+      service_name: "{{ item.service }}"
+      service_type: "{{ item.type }}"
       description: "{{ item.description | default('') }}"
       endpoint: "https://{{ keystone_fqdn }}:35357/v3"
       login_user: "admin"
@@ -33,7 +33,7 @@
   - name: Create custom projects
     keystone:
       command: ensure_project
-      project_name: "{{ item.project_name }}"
+      project_name: "{{ item.project }}"
       domain_name: Default
       description: "{{ item.description | default('') }}"
       endpoint: "https://{{ keystone_fqdn }}:35357/v3"
@@ -59,8 +59,8 @@
   - name: Create custom users
     keystone:
       command: "ensure_user"
-      user_name: "{{ item.user_name }}"
-      project_name: "{{ item.project_name }}"
+      user_name: "{{ item.user }}"
+      project_name: "{{ item.project }}"
       password: "{{ item.password }}"
       email: "{{ item.email | default('') }}"
       domain_name: "Default"
@@ -76,9 +76,9 @@
   - name: Map users and roles
     keystone:
       command: "ensure_user_role"
-      user_name: "{{ item.user_name }}"
-      project_name: "{{ item.project_name }}"
-      role_name: "{{ item.role_name }}"
+      user_name: "{{ item.user }}"
+      project_name: "{{ item.project }}"
+      role_name: "{{ item.role }}"
       endpoint: "https://{{ keystone_fqdn }}:35357/v3"
       login_user: "admin"
       login_password: "{{ keystone_admin_password }}"
