--- a/_DeploymentAndDistroPackaging/ansible/roles/os-keystone/defaults/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/os-keystone/defaults/main.yml
@@ -13,50 +13,39 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Fully Qualified Domain Name for mysql server
-mysql_fqdn: "{{ ansible_fqdn }}"
-
-# Password for the 'root' user in the database
-mysql_root_password: secret
-
 # Fully Qualified Domain Name for Keystone node
 keystone_fqdn: "{{ ansible_fqdn }}"
 
-# Password for the `keystone` user in the database
-keystone_db_password: secret
-
 # Password for the 'admin' user in OpenStack
-keystone_admin_password: secret
+keystone_admin_password: adminUserPassword
 
-# Password for the root database user
-mysql_root_password: secret
-#
-# # Path for mysql data
+# Path for mysql data
 mysql_data: /var/lib/mysql
+
 # A dictionary of host mappings to ips
 etc_hosts: {}
 
 ### The folllowing variables can be used to specify ###
 ### Custom services, projects, users and roles.     ###
 # keystone_services:
-#   - service_name: nova
-#     service_type: compute
+#   - service: nova
+#     type: compute
 #     description: OpenStack Compute Service
 
 # keystone_projects:
-#   - project_name: demo
+#   - project: demo
 #     description: Demo Project
 
 # keystone_users:
-#   - user_name: demo
+#   - user: demo
 #     password: secret
-#     project_name: demo
+#     project: demo
 #     email: demo@example.com
 
 keystone_roles:
   - user
 
 # keystone_user_roles:
-#   - user_name: demo
-#     project_name: demo
-#     role_name: demo
+#   - user: demo
+#     project: demo
+#     role: demo
