Update role names
Roles will be hosted in ansible galaxy under clearlinux user
so roles where renamed as follows

ciao-common     -> clearlinux.ciao-common
ciao-controller -> clearlinux.ciao-controller
ciao-compute    -> clearlinux.ciao-compute
ciao-network    -> clearlinux.ciao-network
docker          -> clearlinux.docker
os-keystone     -> clearlinux.keystone

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao.yml
@@ -1,17 +1,17 @@
 ---
 - hosts: controllers
   roles:
-    - docker
-    - os-keystone
-    - ciao-controller
-    - ciao-webui
+    - clearlinux.docker
+    - clearlinux.keystone
+    - clearlinux.ciao-controller
+    - clearlinux.ciao-webui
 
 - hosts: networks
   strategy: free
   roles:
-    - ciao-network
+    - clearlinux.ciao-network
 
 - hosts: computes
   strategy: free
   roles:
-    - ciao-compute
+    - clearlinux.ciao-compute
