Install ciao from packages or sources
Introduce ciao_dev variable (default to False)

When ciao_dev is set to true, ciao will be fetched and build
from the master branch on github.

When ciao_dev is set to false, ciao will be installed from the
os packages.

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -52,12 +52,12 @@
     - name: Remove CIAO files from github
       file: path={{ item }} state=absent
       with_items:
-        - /usr/bin/ciao-controller
-        - /usr/bin/ciao-scheduler
-        - /usr/bin/ciao-launcher
-        - /usr/bin/ciao-cli
-        - /usr/bin/ciao-cert
-        - /usr/bin/ciao-cnci-agent
+        - /usr/local/bin/ciao-controller
+        - /usr/local/bin/ciao-scheduler
+        - /usr/local/bin/ciao-launcher
+        - /usr/local/bin/ciao-cli
+        - /usr/local/bin/ciao-cert
+        - /usr/local/bin/ciao-cnci-agent
 
     - name: Remove CIAO user
       user:
