--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/install_clearlinux.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/install_clearlinux.yml
@@ -13,15 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  - name: Copy CIAO Binaries
-    copy: src=~/go/bin/{{ item }} dest={{ bindir }}/{{ item }} mode=755
-    with_items:
-      - ciao-cli
-      - ciao-launcher
-    when: ciao_dev
-
-  - name: Copy Compute Node Agent Key
-    copy: src=certificates/ciao/{{ item }} dest=/etc/pki/ciao/{{ item }}
-    with_items:
-      - CAcert-{{ ciao_controller_fqdn }}.pem
-      - cert-CNAgent-localhost.pem
+  - name: Install CIAO from clearlinux bundles
+    command: swupd bundle-add cloud-control {{ swupd_args | default('') }}
+    args:
+      creates: /usr/share/clear/bundles/cloud-control
