--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/install_ubuntu.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/install_ubuntu.yml
@@ -13,15 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-  - name: Copy CIAO Binaries
-    copy: src=~/go/bin/{{ item }} dest={{ bindir }}/{{ item }} mode=755
-    with_items:
-      - ciao-cli
-      - ciao-launcher
-    when: ciao_dev
-
-  - name: Copy Compute Node Agent Key
-    copy: src=certificates/ciao/{{ item }} dest=/etc/pki/ciao/{{ item }}
-    with_items:
-      - CAcert-{{ ciao_controller_fqdn }}.pem
-      - cert-CNAgent-localhost.pem
+  # - name: Install CIAO from ubuntu repo
+  # WIP
