ansible: Install ciao from packages(Fedora 24 OBS)
ciao-common:
- Include install_fedora.yml in the main file of the role
- Install the OBS repository
- Install the "ciao" package

Signed-off-by: Erick Cardona <erick.cardona.ruiz@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/main.yml
@@ -45,4 +45,7 @@
 
       - include: install_ubuntu.yml
         when: ansible_os_family == "Debian"
+
+      - include: install_fedora.yml
+        when: ansible_os_family == "RedHat"
     when: not ciao_dev
