--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -65,3 +65,22 @@
         state: absent
         remove: yes
       when: ansible_distribution == 'Ubuntu'
+
+    - name: Remove OBS repository (Ubuntu)
+      apt_repository:
+        repo: deb http://download.opensuse.org/repositories/home:/clearlinux:/preview:/ciao/xUbuntu_16.04/ /
+        state: absent
+      when: ansible_distribution == 'Ubuntu'
+
+    - name: Remove OBS repository (Fedora)
+      yum_repository: name=ciao state=absent
+      when: ansible_os_family == 'RedHat'
+
+    - name: Remove broken symlinks in /etc/ssl/certs
+      command: find -L /etc/ssl/certs -type l -delete
+      ignore_errors: yes
+
+    - name: Update certificates (Ubuntu)
+      command: update-ca-certificates
+      when: ansible_os_family == "Debian"
+      ignore_errors: yes
