ansible: Docker role: install in fedora
Add support for fedora 24 in clearlinux.docker role

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/docker/meta/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/docker/meta/main.yml
@@ -13,12 +13,18 @@ galaxy_info:
   - name: Ubuntu
     versions:
       - xenial
+  - name: Fedora
+    versions:
+      - 24
   - name: ClearLinux
+    versions:
+      - all
 
   galaxy_tags:
     - ubuntu
     - xenial
     - clearlinux
+    - fedora
     - docker
 
 dependencies: []
