--- a/_DeploymentAndDistroPackaging/ansible/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: controllers
+  become: yes
   roles:
     - clearlinux.docker
     - clearlinux.keystone
@@ -7,11 +8,13 @@
     - clearlinux.ciao-webui
 
 - hosts: networks
+  become: yes
   strategy: free
   roles:
     - clearlinux.ciao-network
 
 - hosts: computes
+  become: yes
   strategy: free
   roles:
     - clearlinux.ciao-compute
