ansible: Add OBS server repo key
Retrieve the OBS ciao repository key in order to verify the download
of the ciao package

Signed-off-by: Erick Cardona <erick.cardona.ruiz@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/install_ubuntu.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-common/tasks/install_ubuntu.yml
@@ -13,16 +13,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+    - name: install OBS CIAO repository key
+      apt_key:
+        url: http://download.opensuse.org/repositories/home:/clearlinux:/preview:/ciao/xUbuntu_16.04/Release.key
+        state: present
+
     - name: Install OBS CIAO repository
       apt_repository:
         repo: deb http://download.opensuse.org/repositories/home:/clearlinux:/preview:/ciao/xUbuntu_16.04/ /
         state: present
         update_cache: yes
-        validate_certs: no
 
     - name: Install CIAO from OBS repository
       apt:
         name: ciao
         state: present
-        update_cache: yes
-        force: yes
