ansible: Create ciao user in fedora
Create ciao user in fedora and ubuntu

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -67,7 +67,7 @@
         name: ciao
         state: absent
         remove: yes
-      when: ansible_distribution == 'Ubuntu'
+      when: ansible_os_family == "Debian" or ansible_os_family == "RedHat"
 
     - name: Remove OBS repository (Ubuntu)
       apt_repository:
