ansible: Fix bug introduced in 92a9998
The playbooks where written to be run as root initially,
92a9998 introduced a change to allow the playbooks to be run
as a normal user with sudo privileges.

This commit prevents local tasks to be run as root as become
should be used on the remote servers only and not in the
deployment machine.

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/cleanup/ciao.yml
@@ -13,12 +13,14 @@
         - ~/go
 
 - hosts: controllers
+  become: yes
   tasks:
     - name: Stop ciao-webui docker container
       docker_container: name=ciao-webui state=absent
       ignore_errors: yes
 
 - hosts: controllers:computes:networks
+  become: yes
   tasks:
     # In ansible 2.2.0 we can drop ignore errors since it will not fail
     # when the services does not exist.
