--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/create_cnci_image.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/create_cnci_image.yml
@@ -20,14 +20,11 @@
     get_url:
       url: "{{ cnci_image_url }}"
       dest: images/{{ cnci_image }}.xz
-      use_proxy: "{{ use_proxy | default('yes') }}"
     register: download_cnci
-    connection: local
 
   - name: Force uncompress cnci image
     file: path=images/{{ cnci_image }} state=absent
     when: download_cnci.changed
-    connection: local
 
   - name: Decompressing cnci image
     command: unxz -k {{ cnci_image }}.xz
@@ -35,21 +32,19 @@
       chdir: images
       creates: "{{ cnci_image }}"
     register: decompress_cnci
-    connection: local
 
   - name: Force setup of cnci image
     file: path=images/.cnci_ready state=absent
     when: download_cnci.changed or decompress_cnci.changed
-    connection: local
 
   - name: Check if cnci image is already setup
     stat: path=images/.cnci_ready
     register: st
     changed_when: False
-    connection: local
 
   - block:
     - name: Loading nbd module
+      become: yes
       modprobe: name=nbd state=present params="max_part=63"
 
     - name: Check /dev/nbd0 size
@@ -58,13 +53,14 @@
       changed_when: False
 
     - name: Attaching cnci image to /dev/ndb0
-      command: qemu-nbd -c /dev/nbd0 images/{{ cnci_image }} -f raw
+      command: sudo qemu-nbd -c /dev/nbd0 images/{{ cnci_image }} -f raw
       when: nbd0_size.stdout == '0'
 
     - name: Run partprobe
-      command: partprobe /dev/nbd0
+      command: sudo partprobe /dev/nbd0
 
     - name: Mounting cnci image in /mnt/tmp
+      become: yes
       mount:
         name: /mnt/tmp
         src: /dev/nbd0p2
@@ -72,34 +68,36 @@
         state: mounted
 
     - name: Copy ciao_cnci_agent to cnci image
-      shell: cp ~/go/bin/ciao-cnci-agent /mnt/tmp/usr/bin/
+      shell: sudo cp ~/go/bin/ciao-cnci-agent /mnt/tmp/usr/bin/
       args:
         creates: /mnt/tmp/usr/bin/ciao-cnci-agent
 
     - name: Copy ciao-cnci-agent.service to cnci image
-      command: cp {{ ciao_cnci_agent_service }} /mnt/tmp/usr/lib/systemd/system/
+      command: sudo cp {{ ciao_cnci_agent_service }} /mnt/tmp/usr/lib/systemd/system/
       args:
         creates: /mnt/tmp/usr/lib/systemd/system/ciao-cnci-agent.service
 
     - name: Enable ciao-cnci-agent.service in cnci image
-      command: chroot /mnt/tmp /bin/bash -c "systemctl enable ciao-cnci-agent"
+      command: sudo chroot /mnt/tmp /bin/bash -c "systemctl enable ciao-cnci-agent"
       args:
         creates: /mnt/tmp/etc/systemd/system/default.target.wants/ciao-cnci-agent.service
 
     - name: Create /var/lib/ciao in cnci image
+      become: yes
       file: path=/mnt/tmp/var/lib/ciao state=directory
 
     - name: Copy CA certificates to cnci image
-      shell: cp certificates/ciao/CAcert-* /mnt/tmp/var/lib/ciao/CAcert-server-localhost.pem
+      shell: sudo cp certificates/ciao/CAcert-* /mnt/tmp/var/lib/ciao/CAcert-server-localhost.pem
       args:
         creates: /mnt/tmp/var/lib/ciao/CAcert-server-localhost.pem
 
     - name: Copy CNCI Agent certificate
-      shell: cp certificates/ciao/cert-CNCIAgent-* /mnt/tmp/var/lib/ciao/cert-client-localhost.pem
+      shell: sudo cp certificates/ciao/cert-CNCIAgent-* /mnt/tmp/var/lib/ciao/cert-client-localhost.pem
       args:
         creates: /mnt/tmp/var/lib/ciao/cert-client-localhost.pem
 
     - name: Unmounting cnci image
+      become: yes
       mount:
         name: /mnt/tmp
         src: /dev/nbd0p2
@@ -107,9 +105,8 @@
         state: absent
 
     - name: Detach cnci image from /dev/ndb0
-      command: qemu-nbd -d /dev/nbd0
+      command: sudo qemu-nbd -d /dev/nbd0
 
     - name: Creating images/.cnci_ready
       file: path=images/.cnci_ready state=touch
     when: not st.stat.exists
-    connection: local
