ansible: Build ciao in the background
Build ciao from sources is one of the longest running task ~1min

- Build ciao in the background
- Run images.yml and endpoints.yml while ciao is building
- Wait for ciao build to finish before starting tasks that
  require the ciao binaries to be present

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/build.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/build.yml
@@ -18,5 +18,6 @@
 
   - name: Build CIAO from sources
     shell: GOPATH=~/go go get -v -u github.com/01org/ciao/...
-    register: result
-    changed_when: "'github.com/01org/ciao/' in result.stderr"
+    register: ciao_build
+    async: 1800
+    poll: 0
