--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/tasks/main.yml
@@ -17,23 +17,33 @@
     become: no
     connection: local
 
-  - include: install.yml
-
-  - include: certificates.yml
+  - include: images.yml
+    become: no
+    connection: local
 
   - include: endpoints.yml
     become: no
     connection: local
 
-  - include: startservices.yml
-
-  - include: images.yml
+  - name: Wait for ciao build
     become: no
     connection: local
+    async_status:
+      jid: "{{ ciao_build.ansible_job_id }}"
+    register: ciao_build_wait
+    until: ciao_build_wait.finished
+    retries: 30
+    changed_when: " ciao_build_wait.stderr is defined and 'github.com/01org/ciao/' in ciao_build_wait.stderr"
+
+  - include: install.yml
+
+  - include: certificates.yml
 
   - include: create_cnci_image.yml
     become: no
     connection: local
+
+  - include: startservices.yml
 
   - name: Create ciaorc file
     become: no
