ansible: Split ciao.yml to include subtasks
Split ansible playbook in
ciao.yaml            - master playbook
ciao_prepare.yml     - playbook to prepare controller node
ciao_controllers.yml - playbook for controller nodes
ciao_computes.yml    - playbook for compute nodes
ciao_networks.yml    - playbook for network nodes

Signed-off-by: Alberto Murillo <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/ciao.yml
+++ b/_DeploymentAndDistroPackaging/ansible/ciao.yml
@@ -1,20 +1,5 @@
 ---
-- hosts: controllers
-  become: yes
-  roles:
-    - clearlinux.docker
-    - clearlinux.keystone
-    - clearlinux.ciao-controller
-    - clearlinux.ciao-webui
-
-- hosts: networks
-  become: yes
-  strategy: free
-  roles:
-    - clearlinux.ciao-network
-
-- hosts: computes
-  become: yes
-  strategy: free
-  roles:
-    - clearlinux.ciao-compute
+- include: ciao_prepare.yml
+- include: ciao_controllers.yml
+- include: ciao_networks.yml
+- include: ciao_computes.yml
